--- a/service.html
+++ b/service.html
@@ -27,16 +27,16 @@
   </div>
 
  
-     <img src="home.png" style="position:absolute; right:0px; width:150px;height:150px;"  onclick="alert('dont know what to do here')">
+     <img src="home.png" style="position:absolute; right:0px; width:150px;height:150px;"  onclick="location.href = 'index.html'">
       <img src="left.png" style="position:absolute; right:300px; width:150px;height:150px;"  onclick="alert('dont know what to do here')">
-      <img src="left.png" style="position:absolute; right:150px; width:150px;height:150px; -webkit-transform: scaleX(-1); transform: scaleX(-1);" onclick="buttonPressed('right');">
+      <img src="left.png" style="position:absolute; right:150px; width:150px;height:150px; -webkit-transform: scaleX(-1); transform: scaleX(-1);" onclick="alert('dont know what to do here');">
 
 
   <div id="backDiv" onclick="location.href = 'index.html'" style="position:absolute;left:0px; bottom:0; height:100px;width:150px;border:solid; text-align: center; background-color: rgb(0,0,0); color:#CEB888;"
 >
   Back
 </div>
-	<body style="background-color: rgb(255,255,255); font-family: Algerian; font-size: 40px;">
+	<body style="background-color: rgb(255,255,255); font-family: sans-serif; font-size: 40px;">
  
   </body>
 </html>
